I fixed the text align in a element of the projects

--- a/style.css
+++ b/style.css
@@ -43,11 +43,11 @@ header a {
     text-align: justify;
 }
 
-.main-content #project-showcase {
+#project-showcase {
     margin-bottom: 0.5em;
 }
 
-.main-content #project-showcase p {
+#project-showcase p {
     font-size: 2em;
     text-align: center;
 }
@@ -77,22 +77,23 @@ header a {
     border-radius: 8px;
 }
 
-.project h3 {
+#project-showcase .project-container .project h3 {
     font-weight: bold;
     margin-bottom: 0.5em;
     text-align: center;
-    font-size: 1.7em;
+    font-size: 2em;
 }
 
-#project-showcase .project p {
+#project-showcase .project-container .project p {
     margin-bottom: 0.5em;
     color: #666;
     text-align: justify;
-    font-size: 1.25em;
+    font-size: 1.5em;
 }
 
-#project-showcase .project a {
+#project-showcase .project-container .project a {
     display: block;
+    text-align: center;
 }
 
 .project:hover {
